--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "analytics",
   "description": "HBS Web Analytics Wrapper",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "repository": "HBSAWS/analytics",
   "author": "HBS WAT",
   "banner": "analytics",
@@ -9,6 +9,7 @@
     "dateformat": "^1.0.11",
     "gulp": "^3.9.0",
     "gulp-header": "^1.2.2",
+    "gulp-strip-comments": "^2.4.5",
     "gulp-uglify": "^1.2.0",
     "run-sequence": "^1.1.1"
   },
